--- a/style.css
+++ b/style.css
@@ -18,11 +18,21 @@ body {
   background: var(--black-gradient, radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #181E27 100%));
   padding: 30px;
 }
+.ratings-container figure {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  border: none;
+  margin-right: 10px;
+  background-color: #262E38; 
+  line-height: 50px;
+}
 .ratings-container h2 {
   color: #fff;
   font-size: 24px;
   font-weight: 700;
-  margin-top: 8px;
+  margin-top: 20px;
 }
 .ratings-container p {
   color: #969FAD;
@@ -49,4 +59,19 @@ body {
   font-weight: 700;
   line-height: 50px;
   letter-spacing: 0.175px;
+}
+.button-container {
+  margin-top: 20px;
+}
+button {
+  width: 279px;
+  height: 45px;
+  border-radius: 22.5px;
+  background-color:#FC7614;
+  border: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1.867px; 
+  text-transform: uppercase;
 }
