--- a/style.css
+++ b/style.css
@@ -58,8 +58,9 @@ body {
   color: #7C8798;
   font-size: 14px;
   font-weight: 700;
-  line-height: 50px;
-  letter-spacing: 0.175px;
+  /**line-height: 50px;**/
+  /**letter-spacing: 0.175px;**/
+  padding: 15px;
 }
 .button-container {
   margin-top: 20px;
@@ -101,6 +102,6 @@ button {
   color: #969FAD;
   font-size: 14px;
   font-weight: 400;
-  line-height: 22px; /* 157.143% */
+  line-height: 22px; 
   margin-top: 8px;
 }
