--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ body {
   }
   #ratings-number li {
     margin-right: 20px;
-    line-height: 16px;
+    text-align: center;
   }
   #submitButton {
     width: 300px;
