--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   max-width: 375px;
   height: 360px;
   border-radius: 15px;
-  margin: 0;
+  margin: 0 auto;
   background: var(--black-gradient, radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #181E27 100%));
   padding: 25px;
 }
@@ -139,6 +139,7 @@ body {
   .feedback-container {
     width: 100%;
     height: 360px;
+    margin: 0 auto;
   }
   #ratings {
     width: 68%;
@@ -167,23 +168,23 @@ body {
     height: 100vh;
   }
   .content {
-   margin-left: 10px;
-   padding-top: 20px;
-   padding: 0;
+    margin-left: 10px;
+    padding-top: 20px;
+    padding: 0;
   }
   .feedback-content {
-   margin-top: 30px;
+    margin-top: 30px;
   }
   .ratings-container ul {
     width: 120%;
+    margin-top: 8px;
   }
   #ratings-number #ratingsButton {
     padding: 10px;
     text-align: center;
   }
   #ratings-number li {
-    margin-right: 20px;
-    
+    margin-right: 15px;
   }
   #submitButton {
     width: 300px;
