--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .feedback-container {
   width: 100%;
   max-width: 375px;
-  height: 360px;
+  height: auto;
   border-radius: 15px;
   margin: 0 auto;
   background: var(--black-gradient, radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #181E27 100%));
@@ -78,7 +78,7 @@ body {
   background-color: #262E38;
   text-align: center;
   width: 65%;
-  padding:8px;
+  padding: 8px;
   margin-left: 50px;
 }
 .feedback-container h2 {
@@ -135,11 +135,11 @@ body {
   width: 70%;
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (min-width: 360px) {
   .ratings-container, 
   .feedback-container {
     width: 100%;
-    height: 360px;
+    height: auto;
     margin: 0 auto;
   }
   #ratings {
@@ -149,14 +149,14 @@ body {
     width: 120%;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
  .content {
    margin-left: 10px;
    padding-top: 20px;
- }
+  }
  .feedback-content {
    margin-top: 30px;
- }
+  }
 }
 @media screen and (max-width: 1440px) {
   body {
